force-app/main/default/objects/Zuora_ALL_WW_Product__mdt/Zuora_ALL_WW_Product__mdt.object-meta.xml
<CustomObject>
    <label>Zuora ALL WW Product</label>
    <pluralLabel>Zuora ALL WW Products</pluralLabel>
</CustomObject>