force-app/main/default/objects/Zuora_ALL_WW_Product__mdt/fields/Number_of_countries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_countries__c</fullName>
    <label>Number of countries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>