force-app/main/default/objects/Zuora_ALL_WW_Product__mdt/fields/SKU_list__c.field-meta.xml
<CustomField>
    <fullName>SKU_list__c</fullName>
    <label>SKU list</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>