force-app/main/default/objects/Zuora_ALL_WW_Product__mdt/fields/SKU_message__c.field-meta.xml
<CustomField>
    <fullName>SKU_message__c</fullName>
    <label>SKU message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>