force-app/main/default/objects/Zuora_ALL_WW_Product__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
            <value>
                <fullName>ALL+WW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>